--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 res/language/input/
 res/language/input/data.txt
 res/language/input/Human_data.txt
+literature_project_1/
+literature_project_2/
 
 
 # User-specific files
